# Library_Management

./: CMakeLists.txt  main.cpp
Controllers/: BookManager.cpp  BookManager.h
Models/DAO/: BookDAO.cpp  BookDAO.h  UserDAO.cpp  UserDAO.h
Models/Entity/: Account.cpp  Account.h  Book.cpp  Book.h  User.cpp  User.h
Models/Service/: BookService.cpp  BookService.h
